# live-competition-2021

./: .gitignore  Procfile  README.md  app.py  bot.py  conda_env-macox.yaml  conda_env-maxos.yaml  pyproject.toml  requirements.txt  run.sh  sample.py
datasets/: clusterdf.csv  clusterdf_context.csv  clusterdf_uttr.csv  context_emb.npy  kmeans.pkl  tsne.pkl  tsne_context.pkl  tsne_uttr.pkl  uttr_emb.npy
src/: backbone.py  utils.py
templates/: index.html
