[project]
name = "live-competition-2021"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuta0306", email = "yuta.20010306@gmail.com" }
]
dependencies = [
    "transformers>=4.31.0",
    "torch>=2.0.1",
    "scikit-learn>=1.3.0",
    "numpy>=1.25.2",
    "pandas>=2.0.3",
    "fugashi>=1.2.1",
    "unidic-lite>=1.0.8",
    "opentsne>=1.0.0",
    "flask>=2.3.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "flake8>=6.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true
